manifests/hardened/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-hardened
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: demo-hardened }
  template:
    metadata:
      labels: { app: demo-hardened }
    spec:
      serviceAccountName: demo-app
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: demo
          image: nginxinc/nginx-unprivileged:1.27-alpine
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
      volumes:
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
